FLY wire David/force-app/main/default/objects/Quota__c/Quota__c.object-meta.xml
<CustomObject>
    <description>Quota record to house the sales reps Quotas and commission rates etc. Meant to help calculate commissions and report  at an individual Sales exec level how they are doing against their quotas.</description>
    <label>Quota</label>
    <nameField>
        <label>Quotas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>