FLY wire David/force-app/main/default/objects/Quota__c/fields/ARR_Quota__c.field-meta.xml
<CustomField>
    <fullName>ARR_Quota__c</fullName>
    <label>ARR Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>