FLY wire David/force-app/main/default/objects/Quota__c/fields/Average_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Exchange_Rate__c</fullName>
    <inlineHelpText>TBD</inlineHelpText>
    <label>Average Exchange Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>