FLY wire David/force-app/main/default/objects/Quota__c/fields/Commission_Currency__c.field-meta.xml
<CustomField>
    <fullName>Commission_Currency__c</fullName>
    <description>Currency where the Rep is located</description>
    <inlineHelpText>Currency where the Rep is located</inlineHelpText>
    <label>Commission Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>