FLY wire David/force-app/main/default/objects/Quota__c/fields/Cross_Boarder_Revenue_Growth__c.field-meta.xml
<CustomField>
    <fullName>Cross_Boarder_Revenue_Growth__c</fullName>
    <label>Cross Boarder Revenue Growth</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>