FLY wire David/force-app/main/default/objects/Quota__c/fields/Cross_Border_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Cross_Border_Revenue_Target__c</fullName>
    <label>Cross Border Revenue Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>