FLY wire David/force-app/main/default/objects/Quota__c/fields/CRS_Money_Moved_Yearly__c.field-meta.xml
<CustomField>
    <fullName>CRS_Money_Moved_Yearly__c</fullName>
    <inlineHelpText>TBD -  True up actual Money Moved for CRS products one year past live date?</inlineHelpText>
    <label>CRS Money Moved (Yearly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>