FLY wire David/force-app/main/default/objects/Quota__c/fields/CRS_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CRS_Revenue__c</fullName>
    <inlineHelpText>TBD - From Amount field on Opps with CRS products?</inlineHelpText>
    <label>CRS Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>