FLY wire David/force-app/main/default/objects/Quota__c/fields/Int_l_Student__c.field-meta.xml
<CustomField>
    <fullName>Int_l_Student__c</fullName>
    <inlineHelpText>TBD</inlineHelpText>
    <label>Int&apos;l Student</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>