FLY wire David/force-app/main/default/objects/Quota__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User Lookup field to the Sales Exec Manager.</description>
    <inlineHelpText>User Lookup field to the Sales Exec Manager.</inlineHelpText>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ManagersRepQuota</relationshipName>
    <type>Lookup</type>
</CustomField>