FLY wire David/force-app/main/default/objects/Quota__c/fields/Manager_Payout__c.field-meta.xml
<CustomField>
    <fullName>Manager_Payout__c</fullName>
    <inlineHelpText>Percentage Amount paid to team leads based on their teams performance (rev, and some part of # of payers)</inlineHelpText>
    <label>Manager Payout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>