FLY wire David/force-app/main/default/objects/Quota__c/fields/Number_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Accounts__c</fullName>
    <description>Field created per Steven for Commercial team quotas</description>
    <label>Number of Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>