FLY wire David/force-app/main/default/objects/Quota__c/fields/Payout_Int_l_Student_ESL__c.field-meta.xml
<CustomField>
    <fullName>Payout_Int_l_Student_ESL__c</fullName>
    <inlineHelpText>TBD</inlineHelpText>
    <label>Payout - Int&apos;l Student ESL</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>