FLY wire David/force-app/main/default/objects/Quota__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to User, Person this Quota record is for.</description>
    <inlineHelpText>Person this Quota record is for.</inlineHelpText>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The user you are trying to enter is not active.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotas</relationshipName>
    <type>Lookup</type>
</CustomField>